--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "elliptic": "^6.6.1",
     "embla-carousel-react": "^8.1.5",
-    "ethers": "^5.7.2",
-    "ipfs-http-client": "^60.0.1",
+    "ethers": "^6.13.4",
+    "ipfs-http-client": "^57.0.3",
     "lucide-react": "^0.394.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
@@ -63,6 +64,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
+    "ws": "^7.5.10",
     "zod": "^3.23.8"
   },
   "devDependencies": {
