--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "glob-parent": "^5.1.2",
     "got": "^11.8.5",
     "hawk": "^9.0.1",
+    "hoek": "^6.1.3",
     "ipfs-http-client": "^57.0.3",
     "lucide-react": "^0.394.0",
     "micromatch": "^4.0.8",
@@ -68,6 +69,7 @@
     "react-resizable-panels": "^2.0.19",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
+    "request": "^2.88.2",
     "shelljs": "^0.8.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
